# rgssad-rs

./: .gitattributes  Cargo.toml  FileFormat.md  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
rgssad/: .gitattributes  Cargo.toml  all.html  enum.Error.html  index.html  sidebar-items.js
rgssad/examples/: readme.rs
rgssad/reader/: index.html  sidebar-items.js  struct.Entry.html  struct.File.html  struct.Reader.html
rgssad/sans_io/: enum.Error.html  enum.ReaderAction.html  enum.WriterAction.html  index.html  sidebar-items.js  struct.FileHeader.html  struct.Reader.html  struct.Writer.html
rgssad/sans_io/reader/: struct.Reader.html
rgssad/sans_io/writer/: struct.Writer.html
rgssad/src/: lib.rs  reader.rs  reader3.rs  sans_io.rs  tokio.rs  writer.rs  writer3.rs
rgssad/src/reader/: buffer.rs
rgssad/src/sans_io/: reader.rs  reader3.rs  writer.rs  writer3.rs
rgssad/src/tokio/: adapters.rs  reader.rs  writer.rs
rgssad/src/writer/: buffer.rs
rgssad/test_data/RPGMakerVXAceGame/: Game.ini
rgssad/test_data/RPGMakerVXAceGame-Export/RPGMakerVXAceGame/: Game.rgss3a
rgssad/test_data/RPGMakerVXAceGame/Data/: Actors.rvdata2  Animations.rvdata2  Armors.rvdata2  Classes.rvdata2  (+12 more)
rgssad/test_data/RPGMakerVXTestGame/: Game.ini
rgssad/tokio/: index.html
rgssad/tokio/reader/: index.html  sidebar-items.js  struct.Entry.html  struct.File.html  struct.ReadEntryFuture.html  struct.TokioReader.html
rgssad/tokio/writer/: index.html  sidebar-items.js  struct.TokioWriter.html
rgssad/writer/: index.html  struct.Writer.html
(+125 files in other folders)
