[package]
name = "rgssad"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [
    "test_data",
]

[dependencies]
oval = "2.0.0"
pin-project-lite = { version = "0.2.14", optional = true}
tokio = { version = "1.40.0", features = [ "io-util" ], optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = [ "rt", "macros" ] }

[features]
# Enable tokio wrappers
tokio = [ "dep:tokio", "dep:pin-project-lite" ]
